<resources>

    <string name="app_name">Hive</string>
    <string name="locations_title">Locations</string>

    //////////////////////////////////////////////////////////////////////////////

    //Edit Text Layout
    <string name="action_settings">Settings</string>
    <string name="hint_task_name">Task Name</string>
    <string name="hint_room_name">Room</string>
    <string name="hint_task_description">Task Description</string>
    <string name="hint_street_address">Street Address</string>
    <string name="hint_city">City</string>
    <string name="hint_apt_num">Apartment Number</string>
    <string name="hint_state">State</string>
    <string name="hint_zip">Zip Code</string>
    <string name="hint_num_bedrooms">Number of Bedrooms</string>
    <string name="hint_num_bathrooms">Number of Bathrooms</string>
    <string name="hint_num_kitchens">Number of Kitchens</string>
    <string name="hint_password">Password</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>
    <string name="hint_new_task">New Task</string>
    <string name="reg_title">Registration</string>
    <string name="firstname_reg">Enter First Name</string>
    <string name="lastname_reg">Enter Last Name</string>
    <string name="email_edit">Enter Email</string>
    <string name="password_edit">Enter Password</string>
    <string name="reg_btn">Submit</string>
    <string name="confirm_password_edit">Confirm Password</string>

    //////////////////////////////////////////////////////////////////////////////

    <string-array name="array_spinner_1_10">
        <item>Select Number of Dwellings</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    ////////////////////////////////////////////////////////////////////////////////

    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Mercy Haven Properties</string>
    <string name="nav_header_subtitle">Swift Task Manager</string>
    <string name="nav_header_desc">Navigation header</string>

    ////////////////////////////////////////////////////////////////////////////////

    <string name="menu_home">Home</string>
    <string name="menu_main">Main Menu</string>
    <string name="menu_locations">Locations</string>
    <string name="menu_work_orders">Work Orders</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="return_btn">Back</string>
    <string name="admin_check">Administrator</string>

    <string name="icons8_link"><a href="https://icons8.com">Icons by Icons8</a></string>
    <string name="earl_github_link"><a href="https://github.com/eaplatt3">Registration XML and Java\nCode by Earl Platt III</a></string>
    <string name="russ_github_link"><a href="https://github.com/roxbrr">"Application Code and Design\nby Russell Roxburgh"</a></string>

</resources>
