<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/reg_constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_list"
    tools:context=".RegistrationActivity.RegActivity">

    <Button
        android:id="@+id/btn_return"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/shape4"
        android:shadowColor="@android:color/white"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="1"
        android:text="@string/return_btn"
        android:textColor="#688c8c"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"/>

    <TextView
        android:id="@+id/title_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Register Account"
        android:textColor="#182526"
        android:textSize="25sp"
        android:layout_below="@id/btn_return"/>


    <EditText
        android:id="@+id/firstname_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:hint="@string/firstname_reg"
        android:inputType="text"
        android:layout_below="@id/title_reg"/>

    <EditText
        android:id="@+id/lastname_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:hint="@string/lastname_reg"
        android:inputType="text"
        android:layout_below="@id/firstname_reg"/>

    <EditText
        android:id="@+id/email_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:hint="@string/email_edit"
        android:inputType="textEmailAddress"
        android:layout_below="@id/lastname_reg"/>

    <EditText
        android:id="@+id/password_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:hint="@string/password_edit"
        android:inputType="textPassword"
        android:layout_below="@id/email_reg"/>

    <EditText
        android:id="@+id/password2_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:hint="@string/confirm_password_edit"
        android:inputType="textPassword"
        android:layout_below="@id/password_reg"/>



    <Button
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shape4"
        android:gravity="center"
        android:shadowColor="@android:color/white"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="1"
        android:text="@string/reg_btn"
        android:textColor="#688c8c"
        android:layout_below="@id/password2_reg"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"/>



</RelativeLayout>