<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#E0E0E0">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_layout_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp">

        <EditText
            android:id="@+id/et_dwelling_unit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_apt_num"
            android:singleLine="true"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_layout_bedrooms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp">

        <EditText
            android:id="@+id/et_num_bedrooms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_num_bedrooms"
            android:singleLine="true"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_layout_bathrooms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp">

        <EditText
            android:id="@+id/et_num_bathrooms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_num_bathrooms"
            android:singleLine="true"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_layout_kitchen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp">

        <EditText
            android:id="@+id/et_num_kitchens"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_num_kitchens"
            android:singleLine="true"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>